<resources>
    <string name="app_name">Уяач</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="action_haih">Поиск</string>
    <string name="action_add">Добавить</string>
    <string name="title_activity_login">Sign in</string>
    <string name="azarga_nemeh">Новый жеребец</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="haih">Поиск</string>
    <string name="textview">TextView</string>
    <string name="azarga_nemeh_title">Нэмэх цэс:</string>
    <string name="nemeh_tovch">Добавить</string>
    <string name="mori_nemeh">Новый мерин</string>
    <string name="morid_title">Мерины</string>
    <string name="azarga_title">Жеребцы</string>
    <string name="azarga_nemeh1">Новый жеребец</string>
    <string name="azarga_zurag_nemeh">Изображение:</string>
    <string name="azarga_ner">Имя:</string>
    <string name="id_azarga">ID:</string>
    <string name="huis_azarga">Пол:</string>
    <string name="ugshil_azarga">Порода:</string>
    <string name="date_Azarga">Дата рождения:</string>
    <string name="zus_azarga">Масть:</string>
    <string name="nomer_azarga">Номер:</string>
    <string name="birthgazar_azarga">Место рождения:</string>
    <string name="tsus_azarga">Кровь:</string>
    <string name="tamga_azarga">Клеймение:</string>
    <string name="zurag_oruulah_but">Добавить изображение</string>
    <string name="tamga_oruulah_but">Добавить Клеймение</string>
    <string name="tamga_image">tamga_image</string>
    <string name="azarga_image">azarga_image</string>
    <string name="save_azarga_adding">Сохранить</string>
    <string name="azarga_sureg_title">Стая жеребца</string>
    <string name="genius_tree_azarga">Дерево гена:</string>
    <string name="gen_inf_azarga">Данные</string>
    <string name="childs_azarga">Потомки</string>
    <string name="amjilt_azarga">Награды</string>
    <string name="azargasinglerowimage">azargasinglerowImage</string>
    <string name="imageaa">image</string>
    <string name="all_azarga_harah">Все жеребцы</string>
    <string name="uyach_head">Заводчик</string>
    <string name="uyach_header_img">uyach_header_img</string>
    <string name="turul_mori">Тип:</string>
    <string name="welcome">Добро пожаловать в приложение Лошадь!</string>
    <string name="azarga">Жеребец и его стая</string>
    <string name="morid">Мерины</string>
    <string name="etseg">Отец:</string>
    <string name="eh">Мать:</string>
    <string name="azarga_gen_zurag">azarga_gen_zurag</string>
    <string name="material_is_good">Material is Good</string>
    <string name="azarga1">Данные:</string>
    <string name="name">Имя:</string>
    <string name="ugshil">Порода:</string>
    <string name="zus">Масть:</string>
    <string name="ognoo">Дата рождения:</string>
    <string name="gazar">Место рождения:</string>
    <string name="tsus">Кровь:</string>
    <string name="id">ID:</string>
    <string name="huis">Пол:</string>
    <string name="etseg1">Отец:</string>
    <string name="eh1">Мать:</string>
    <string name="but_edit">Изменить</string>
    <string name="but_del">Удалить</string>
    <string name="child">child</string>
    <string name="mori">Морь</string>
    <string name="mori1">түжш</string>
    <string name="main_inf_mori">Данные</string>
    <string name="amjilt_mori">Награда</string>
    <string name="gen_mod_mori">Дерево гена</string>
    <string name="sureg">sureg</string>
    <string name="add_child">Добавить лошадь в стаю</string>
    <string name="haihmori">Поиск</string>
    <string name="harah_morid">Все мерины</string>
    <string name="morid2">morid</string>
    <string name="ugshil2">Порода:</string>
    <string name="mori3">түжш</string>
    <string name="mori_nemeh1">Добавить</string>
    <string name="moriner">Имя:</string>
    <string name="mori_id">ID:</string>
    <string name="mori_ugshil">Порода :</string>
    <string name="mori_zus">Масть:</string>
    <string name="mori_ognoo">Дата рождения:</string>
    <string name="mori_tsus">Кровь:</string>
    <string name="mori_gazar">Место рождения:</string>
    <string name="morietseg">Отец:</string>
    <string name="morieh">Мать:</string>
    <string name="морьд">Мерины</string>
    <string name="азнууд">Жеребцы</string>
    <string name="uyach_name">УЯАЧ</string>
    <string name="welcome_1">Добро пожаловать</string>
    <string name="newuser">Новый пользователь</string>
    <string name="before_used">Если раньше использовались</string>
    <string name="restore_data">Восстановить данные</string>
    <string name="user_datas">Данные пользователя:</string>
    <string name="name_усэр">Name</string>
    <string name="name_last">Name</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="email">Email</string>
    <string name="aimag">Город</string>
    <string name="sum">Район</string>
    <string name="save">Сохранить</string>
    <string-array name="TypeList">
        <item>М   </item>
        <item>Ж </item>

    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="guunuud">Кобылы</string>
    <string name="guu_nemeh">Добавить</string>
    <string name="гуу_харах">Все кобылы</string>
    <string name="unaganuud">Жеребенок</string>
    <string name="unaga_nemeh">Добавить</string>
    <string name="buh_unaga_harah">Все жеребята</string>
    <string name="new_user">Новый пользователь</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="edituser">Выйти</string>
    <string name="edit_user">Изменить</string>
    <string name="myprofile">myprofile</string>
    <string name="cancel">Назад</string>
</resources>
