<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/azarga_sureg_title"
        android:id="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView_sureg_ner"
        android:layout_alignBottom="@+id/button15"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_gravity="center"
        android:layout_above="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/sureg"
        android:layout_below="@+id/textView17" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen_inf_azarga"
        android:id="@+id/button8"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genius_tree_azarga"
        android:id="@+id/button7"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignRight="@+id/button15"
        android:layout_alignEnd="@+id/button15"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/childs_azarga"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button10"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amjilt_azarga"
        android:id="@+id/button10"
        android:layout_below="@+id/button8"
        android:layout_alignLeft="@+id/textView_sureg_ner"
        android:layout_alignStart="@+id/textView_sureg_ner" />

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expandableListView"
        android:layout_below="@+id/button9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_child"
        android:id="@+id/button15"
        android:onClick="add"
        android:layout_alignTop="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>