<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="OnButtonClickAddMori"
    android:weightSum="1"
    android:background="#98923c">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/unaganuud"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:fontFamily="sans"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="467dp"
        android:layout_height="0dp"
        android:id="@+id/imageView7"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/unaga_img"
        android:contentDescription="@string/morid2"
        android:layout_weight="0.79" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/haihmori"
        android:background="@drawable/button"
        android:id="@+id/button5"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/unaga_nemeh"
        android:id="@+id/button3"
        android:onClick="addMori"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:layout_marginBottom="10dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/buh_unaga_harah"
        android:id="@+id/button12"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"
        android:onClick="viewAllMori" />

</LinearLayout>