<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".ViewActStallion"
        android:background="#ebfaff">

    <TextView
        android:text="@string/azarga_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:fontFamily="sans"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="15dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@mipmap/azarga_img"
        android:contentDescription="@string/imageaa"
        android:layout_gravity="center"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button2" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:text="@string/haih"
        android:id="@+id/button2"
        android:background="@drawable/button"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:textStyle="bold"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button11"
        android:layout_alignEnd="@+id/button11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/azarga_nemeh"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="addAzarga"
        android:background="@drawable/button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="bold"
        android:layout_above="@+id/button11"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_azarga_harah"
        android:id="@+id/button11"
        android:onClick="viewAllAzarga"
        android:background="@drawable/button"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginBottom="40dp" />



</RelativeLayout>