<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewActStallion"
    android:background="#05a8f2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/uyach_name"
        android:id="@+id/textView24"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_1"
        android:id="@+id/textView26"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView24"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/before_used"
        android:id="@+id/textView28"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:textStyle="bold"
        android:layout_below="@+id/imageView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_data"
        android:id="@+id/button24"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:id="@+id/button25"
        android:background="@drawable/button"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="192dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView10"
        android:src="@mipmap/ic_launcher"
        android:layout_alignBottom="@+id/button25"
        android:layout_alignLeft="@+id/button25"
        android:layout_alignStart="@+id/button25" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView11"
        android:src="@mipmap/welcome"
        android:layout_below="@+id/textView26"
        android:layout_alignLeft="@+id/button24"
        android:layout_alignStart="@+id/button24"
        android:layout_alignRight="@+id/textView26"
        android:layout_alignEnd="@+id/textView26"
        android:layout_above="@+id/button25" />

</RelativeLayout>